src/gramaticas/sintagmatica/GramaticaSintagmaticaParser.java
// Generated from C:\Users\User\Dropbox\Federal\MESTRADO\Projeto\workspace\SentiWords\src\sentiwords\Sintagmas\GramaticaSintagmatica.g4 by ANTLR 4.0
package gramaticas.sintagmatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaSintagmaticaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PALAVRA=2, INTS=3, SIMBOLOS=4, TERMINAL=5, VIRGULA=6, MODELO=7, 
		NAO=8, ART=9, ADJ=10, SUBS=11, VERB=12, PREP=13, PRON=14, CONJ=15, ADV=16, 
		NUM=17, FABRICANTE=18;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "PALAVRA", "INTS", "SIMBOLOS", "TERMINAL", "','", "MODELO", 
		"'não'", "ART", "ADJ", "SUBS", "VERB", "PREP", "PRON", "CONJ", "ADV", 
		"NUM", "FABRICANTE"
	};
	public static final int
		RULE_periodo = 0, RULE_oracao = 1, RULE_nao_opc = 2, RULE_sn_opc = 3, 
		RULE_sn = 4, RULE_sn_suj = 5, RULE_det = 6, RULE_pre_det = 7, RULE_det_base = 8, 
		RULE_pos_det = 9, RULE_mod = 10, RULE_sp_opc = 11, RULE_sp = 12, RULE_sa_opc = 13, 
		RULE_sa = 14, RULE_intens = 15, RULE_sv = 16, RULE_complemento = 17;
	public static final String[] ruleNames = {
		"periodo", "oracao", "nao_opc", "sn_opc", "sn", "sn_suj", "det", "pre_det", 
		"det_base", "pos_det", "mod", "sp_opc", "sp", "sa_opc", "sa", "intens", 
		"sv", "complemento"
	};

	@Override
	public String getGrammarFileName() { return "GramaticaSintagmatica.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaSintagmaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PeriodoContext extends ParserRuleContext {
		public OracaoContext oracao(int i) {
			return getRuleContext(OracaoContext.class,i);
		}
		public List<OracaoContext> oracao() {
			return getRuleContexts(OracaoContext.class);
		}
		public PeriodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_periodo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterPeriodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitPeriodo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitPeriodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PeriodoContext periodo() throws RecognitionException {
		PeriodoContext _localctx = new PeriodoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_periodo);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					setState(38);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(36); oracao();
						}
						break;

					case 2:
						{
						setState(37);
						matchWildcard();
						}
						break;
					}
					} 
				}
				setState(42);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OracaoContext extends ParserRuleContext {
		public Nao_opcContext nao_opc() {
			return getRuleContext(Nao_opcContext.class,0);
		}
		public SpContext sp() {
			return getRuleContext(SpContext.class,0);
		}
		public TerminalNode VIRGULA() { return getToken(GramaticaSintagmaticaParser.VIRGULA, 0); }
		public Sn_sujContext sn_suj() {
			return getRuleContext(Sn_sujContext.class,0);
		}
		public SvContext sv() {
			return getRuleContext(SvContext.class,0);
		}
		public Sp_opcContext sp_opc() {
			return getRuleContext(Sp_opcContext.class,0);
		}
		public OracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterOracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitOracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitOracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OracaoContext oracao() throws RecognitionException {
		OracaoContext _localctx = new OracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_oracao);
		int _la;
		try {
			setState(65);
			switch (_input.LA(1)) {
			case NAO:
			case ART:
			case SUBS:
			case VERB:
			case PRON:
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ART) | (1L << SUBS) | (1L << PRON) | (1L << NUM))) != 0)) {
					{
					setState(43); sn_suj();
					}
				}

				setState(47);
				_la = _input.LA(1);
				if (_la==NAO) {
					{
					setState(46); nao_opc();
					}
				}

				setState(49); sv();
				setState(51);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(50); sp_opc();
					}
					break;
				}
				}
				break;
			case PREP:
			case ADV:
				enterOuterAlt(_localctx, 2);
				{
				setState(53); sp();
				setState(54); match(VIRGULA);
				setState(56);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ART) | (1L << SUBS) | (1L << PRON) | (1L << NUM))) != 0)) {
					{
					setState(55); sn_suj();
					}
				}

				setState(59);
				_la = _input.LA(1);
				if (_la==NAO) {
					{
					setState(58); nao_opc();
					}
				}

				setState(61); sv();
				setState(63);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(62); sp_opc();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nao_opcContext extends ParserRuleContext {
		public TerminalNode NAO() { return getToken(GramaticaSintagmaticaParser.NAO, 0); }
		public Nao_opcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nao_opc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterNao_opc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitNao_opc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitNao_opc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nao_opcContext nao_opc() throws RecognitionException {
		Nao_opcContext _localctx = new Nao_opcContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nao_opc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(NAO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sn_opcContext extends ParserRuleContext {
		public SnContext sn() {
			return getRuleContext(SnContext.class,0);
		}
		public Sn_opcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sn_opc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSn_opc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSn_opc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSn_opc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sn_opcContext sn_opc() throws RecognitionException {
		Sn_opcContext _localctx = new Sn_opcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sn_opc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); sn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SnContext extends ParserRuleContext {
		public DetContext det() {
			return getRuleContext(DetContext.class,0);
		}
		public TerminalNode SUBS() { return getToken(GramaticaSintagmaticaParser.SUBS, 0); }
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public Sa_opcContext sa_opc() {
			return getRuleContext(Sa_opcContext.class,0);
		}
		public SnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SnContext sn() throws RecognitionException {
		SnContext _localctx = new SnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sn);
		try {
			setState(80);
			switch (_input.LA(1)) {
			case SUBS:
				enterOuterAlt(_localctx, 1);
				{
				setState(71); match(SUBS);
				}
				break;
			case ART:
			case PRON:
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); det();
				setState(74);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(73); sa_opc();
					}
					break;
				}
				setState(76); match(SUBS);
				setState(78);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(77); mod();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sn_sujContext extends ParserRuleContext {
		public List<TerminalNode> PREP() { return getTokens(GramaticaSintagmaticaParser.PREP); }
		public TerminalNode SUBS(int i) {
			return getToken(GramaticaSintagmaticaParser.SUBS, i);
		}
		public DetContext det() {
			return getRuleContext(DetContext.class,0);
		}
		public List<TerminalNode> SUBS() { return getTokens(GramaticaSintagmaticaParser.SUBS); }
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public TerminalNode PREP(int i) {
			return getToken(GramaticaSintagmaticaParser.PREP, i);
		}
		public TerminalNode PRON() { return getToken(GramaticaSintagmaticaParser.PRON, 0); }
		public Sa_opcContext sa_opc() {
			return getRuleContext(Sa_opcContext.class,0);
		}
		public Sn_sujContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sn_suj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSn_suj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSn_suj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSn_suj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sn_sujContext sn_suj() throws RecognitionException {
		Sn_sujContext _localctx = new Sn_sujContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sn_suj);
		int _la;
		try {
			int _alt;
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				switch (_input.LA(1)) {
				case SUBS:
					{
					setState(82); match(SUBS);
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SUBS || _la==PREP) {
						{
						{
						setState(84);
						_la = _input.LA(1);
						if (_la==PREP) {
							{
							setState(83); match(PREP);
							}
						}

						setState(86); match(SUBS);
						}
						}
						setState(91);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case PRON:
					{
					setState(92); match(PRON);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); det();
				setState(97);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(96); sa_opc();
					}
					break;
				}
				setState(99); match(SUBS);
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(101);
						_la = _input.LA(1);
						if (_la==PREP) {
							{
							setState(100); match(PREP);
							}
						}

						setState(103); match(SUBS);
						}
						} 
					}
					setState(108);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(110);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(109); mod();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DetContext extends ParserRuleContext {
		public Pre_detContext pre_det() {
			return getRuleContext(Pre_detContext.class,0);
		}
		public Det_baseContext det_base() {
			return getRuleContext(Det_baseContext.class,0);
		}
		public Pos_detContext pos_det() {
			return getRuleContext(Pos_detContext.class,0);
		}
		public DetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_det; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterDet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitDet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitDet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DetContext det() throws RecognitionException {
		DetContext _localctx = new DetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_det);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(114); pre_det();
				}
				break;
			}
			setState(117); det_base();
			setState(119);
			_la = _input.LA(1);
			if (_la==PRON || _la==NUM) {
				{
				setState(118); pos_det();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pre_detContext extends ParserRuleContext {
		public Pre_detContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pre_det; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterPre_det(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitPre_det(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitPre_det(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pre_detContext pre_det() throws RecognitionException {
		Pre_detContext _localctx = new Pre_detContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pre_det);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Det_baseContext extends ParserRuleContext {
		public TerminalNode ART() { return getToken(GramaticaSintagmaticaParser.ART, 0); }
		public TerminalNode PRON() { return getToken(GramaticaSintagmaticaParser.PRON, 0); }
		public TerminalNode NUM() { return getToken(GramaticaSintagmaticaParser.NUM, 0); }
		public Det_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_det_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterDet_base(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitDet_base(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitDet_base(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Det_baseContext det_base() throws RecognitionException {
		Det_baseContext _localctx = new Det_baseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_det_base);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ART) | (1L << PRON) | (1L << NUM))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pos_detContext extends ParserRuleContext {
		public TerminalNode PRON() { return getToken(GramaticaSintagmaticaParser.PRON, 0); }
		public TerminalNode NUM() { return getToken(GramaticaSintagmaticaParser.NUM, 0); }
		public Pos_detContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pos_det; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterPos_det(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitPos_det(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitPos_det(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pos_detContext pos_det() throws RecognitionException {
		Pos_detContext _localctx = new Pos_detContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pos_det);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==PRON || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModContext extends ParserRuleContext {
		public SpContext sp() {
			return getRuleContext(SpContext.class,0);
		}
		public SaContext sa() {
			return getRuleContext(SaContext.class,0);
		}
		public ModContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterMod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitMod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitMod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModContext mod() throws RecognitionException {
		ModContext _localctx = new ModContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mod);
		try {
			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
				case 1:
					{
					setState(127); sa();
					}
					break;
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130); sp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sp_opcContext extends ParserRuleContext {
		public SpContext sp() {
			return getRuleContext(SpContext.class,0);
		}
		public Sp_opcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sp_opc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSp_opc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSp_opc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSp_opc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sp_opcContext sp_opc() throws RecognitionException {
		Sp_opcContext _localctx = new Sp_opcContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sp_opc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); sp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpContext extends ParserRuleContext {
		public TerminalNode PREP() { return getToken(GramaticaSintagmaticaParser.PREP, 0); }
		public SnContext sn() {
			return getRuleContext(SnContext.class,0);
		}
		public Sp_opcContext sp_opc() {
			return getRuleContext(Sp_opcContext.class,0);
		}
		public TerminalNode ADV() { return getToken(GramaticaSintagmaticaParser.ADV, 0); }
		public SpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpContext sp() throws RecognitionException {
		SpContext _localctx = new SpContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_sp);
		try {
			setState(141);
			switch (_input.LA(1)) {
			case PREP:
				enterOuterAlt(_localctx, 1);
				{
				setState(135); match(PREP);
				setState(136); sn();
				}
				break;
			case ADV:
				enterOuterAlt(_localctx, 2);
				{
				setState(137); match(ADV);
				setState(139);
				switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					setState(138); sp_opc();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sa_opcContext extends ParserRuleContext {
		public SaContext sa() {
			return getRuleContext(SaContext.class,0);
		}
		public Sa_opcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sa_opc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).enterSa_opc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSintagmaticaListener ) ((GramaticaSintagmaticaListener)listener).exitSa_opc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSintagmaticaVisitor ) return ((GramaticaSintagmaticaVisitor<? extends T>)visitor).visitSa_opc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sa_opcContext sa_opc() throws RecognitionException {
		Sa_opcContext _localctx = new Sa_opcContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_sa_opc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				{
				setState(143); sa();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
